--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "idb": "^4.0.3",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1"
-  },
-  "devDependencies": {
+    "morgan": "^1.9.1",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-core": "^6.26.3",
